objects/Personalization__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation_Gift_Card_Amount__c</fullName>
        <formula>IF( 
OR( 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;GCA&quot;), 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;GCBC&quot;), 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;GCRH&quot;), 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;GCS&quot;), 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;GCTN&quot;), 
BEGINS ( OrderLineNumber__r.CW_SKU_ID__r.CW_External_Id__c , &quot;REF&quot;)), 

VALUE( Personalization_Text__c ) , 

null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accommodation Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderLineNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Number</label>
        <referenceTo>Order_Line_Items__c</referenceTo>
        <relationshipLabel>Personalizations</relationshipLabel>
        <relationshipName>Personalizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personalization_Seq_Number__c</fullName>
        <description>External Id field for Personalization seq number</description>
        <externalId>true</externalId>
        <label>Personalization Seq Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalization_Standard_text__c</fullName>
        <label>Personalization Standard text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalization_Text__c</fullName>
        <label>Personalization Text</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalization_Type__c</fullName>
        <label>Personalization Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Personalization</label>
    <listViews>
        <fullName>All_Personalization</fullName>
        <columns>NAME</columns>
        <columns>Personalization_Seq_Number__c</columns>
        <columns>Personalization_Text__c</columns>
        <columns>Personalization_Type__c</columns>
        <columns>OrderLineNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Personalization</label>
        <sharedTo>
            <role>Administration</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Personalization Sequence Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personalizations</pluralLabel>
    <recordTypes>
        <fullName>OrderLine_Personalization</fullName>
        <active>true</active>
        <description>Default record type for Order Line Personalizations coming from CW</description>
        <label>OrderLine Personalization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PersonalizationSeqNumberCannotBeChanged</fullName>
        <active>true</active>
        <description>Personalization Number cannot be changed by anyone other than the System Administrator or the API Only user.</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name=&apos;System Administrator&apos;,$Profile.Name=&apos;API Only&apos;)), ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>You cannot change the Personalization Sequence Number</errorMessage>
    </validationRules>
</CustomObject>